Bug 418585 - Detect an archive instead of executable ffmpeg in Render Animation dialog
Summary: Detect an archive instead of executable ffmpeg in Render Animation dialog
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 4.2.8
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-07 15:36 UTC by Tiar
Modified: 2020-03-23 13:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2020-03-07 15:36:56 UTC
SUMMARY
Our Windows users get really confused about how to get the correct ffmpeg. This needs a step-by-step tutorial (with "how to get a release version instead of a development build" and "how to extract the executable") on Krita Manual, but it would be good to also detect whether someone try to give Krita the .zip file instead of .exe (or just ffmpeg on Linux).

STEPS TO REPRODUCE
1. Download ffmpeg from the https://ffmpeg.zeranoe.com/builds/ site, especially the already suggested one (development build) to see the purpose of Additional Notes
2. Note you downloaded a .zip file
3. Provide the path to the .zip file as a path to ffmpeg in Krita
4. Try to render an animation

OBSERVED RESULT
No warning, failed rendering, users are confused since they downloaded ffmpeg exactly as the Krita Manual says.


EXPECTED RESULT
If the filename ends with ".zip", there should be a warning with a short instruction, maybe something like: "The ffmpeg file you provided the path to has a '.zip' extension. If you encounter issues while rendering, check if the file is an archive, extract all files and point Krita into bin/ffmpeg.exe file inside the folder with files from the archive" or something similar.


ADDITIONAL INFORMATION
Would be awesome to check if the ffmpeg used is a release build or not... I believe most Windows users use the development build now -.- since that's what ffmpeg suggests by default... Maybe not a warning, but some kind of [!] icon next to the ffmpeg path with a tooltip explaining why?


SOFTWARE/OS VERSIONS
Windows: 10
Krita 4.2.8
Comment 1 Ahab Greybeard 2020-03-07 19:10:41 UTC
The Linux static build site, https://johnvansickle.com/ffmpeg/  has recent git master and formal release builds.

It recommends using the git master because "... bug fixes and other imnprovements are added daily."
I'm sure it used to recommend the formal release build.

I'm using formal release 4.2.2 and it works, the same with Windows.
Comment 2 Halla Rempt 2020-03-17 10:53:20 UTC
Git commit aee3db69f14e32928f4e7b805d2ca08d8bed6079 by Boudewijn Rempt.
Committed on 17/03/2020 at 10:53.
Pushed by rempt into branch 'master'.

Add extra checks for the ffmpeg executable

M  +8    -0    plugins/extensions/animationrenderer/DlgAnimationRenderer.cpp

https://invent.kde.org/kde/krita/commit/aee3db69f14e32928f4e7b805d2ca08d8bed6079
Comment 3 Halla Rempt 2020-03-23 13:31:57 UTC
Git commit 8c33ab68aec5cf9abf241d87728d055bc64f3ae4 by Boudewijn Rempt.
Committed on 23/03/2020 at 13:04.
Pushed by rempt into branch 'krita/4.2'.

Add extra checks for the ffmpeg executable
(cherry picked from commit aee3db69f14e32928f4e7b805d2ca08d8bed6079)

M  +8    -0    plugins/extensions/animationrenderer/DlgAnimationRenderer.cpp

https://invent.kde.org/kde/krita/commit/8c33ab68aec5cf9abf241d87728d055bc64f3ae4