Add extra checks for the ffmpeg executable

BUG:418585
(cherry picked from commit aee3db69f14e32928f4e7b805d2ca08d8bed6079)